# bucket

./: .gitignore
excelHandler/: Cargo.toml  README.md  example.py  excel.py
excelHandler/sample/: python_sample.xlsx  rust_sample.xlsx
excelHandler/src/: lib.rs  main.rs
excelHandler/src/excel/: mod.rs  reader.rs
rust_snips/: Cargo.toml
rust_snips/src/: main.rs
