[package]
name = "excelhandler"
version = "0.1.0"
authors = ["seijimatsuda <seiji3030@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = false

[dependencies]
calamine = "*"
xlsxwriter = "0.2.0"
# syn = "*"
# quote = "*"
